Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3176

Some DNS stats don't persist through restart.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 5.1.1
    • 5.3.0
    • HostDB
    • CentOS Linux 7.0 (Virtual Machine)

    Description

      I can't speak for all of these, but I've noticed over time when viewing stats through traffic_top the "DNS lookup" stat will happily persist through a restart but at the very least "DNS hits" and the "DNS Hit" percentage will not.

      I'm not really sure what the scoop with "DNS Time" is...for me it's always 0.0.

      Please let me know if there's any testing I can do to help out, I'd offer up a patch but C++ just isn't my cup of tea.

      Attachments

        1. TS-3176.patch
          3 kB
          Adam W. Dace

        Activity

          People

            jamespeach James Peach
            adace Adam W. Dace
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: