TS-3176: some DNS stats don't persist through restart

Over time when viewing stats through traffic_top the "DNS lookup"
stat will happily persist through a restart but at the very least
"DNS hits" and the "DNS Hit" percentage will not.